--- a/gulp/package.json
+++ b/gulp/package.json
@@ -36,6 +36,7 @@
     "gulp-filter": "~1.0.0",
     "main-bower-files": "~2.0.0",
     "gulp-notify": "~1.5.0",
-    "run-sequence": "~0.3.6"
+    "run-sequence": "~0.3.6",
+    "map-stream": "~0.1.0"
   }
 }
