--- a/gulp/bower.json
+++ b/gulp/bower.json
@@ -1,9 +1,7 @@
 {
   "name": "project libraries",
   "version": "0.0.0",
-  "authors": [
-    "takumi <takumi@sonicjam.co.jp>"
-  ],
+  "authors": "",
   "license": "MIT",
   "private": true,
   "ignore": [
@@ -15,14 +13,33 @@
   ],
   "devDependencies": {
     "jquery": "1",
-    "gsap": "~1.13.1"
+    "jquery.easing": "~1.3.1",
+    "gsap": "~1.13.1",
+    "EaselJS": "*",
+    "PreloadJS": "*",
+    "underscore": "~1.7.0",
+    "swfobject": "*"
   },
-  "overrides": {
+  "exportsOverride": {
     "jquery": {
-      "main": [ "dist/jquery.min.js" ]
+      "main": [
+        "dist/jquery.min.js"
+      ]
+    },
+    "jquery.easing": {
+      "main": [
+        "js/jquery.easing.min.js"
+      ]
     },
     "gsap": {
-      "main": [ "src/minified/TweenMax.min.js" ]
+      "main": [
+        "src/minified/TweenMax.min.js"
+      ]
+    },
+    "underscore": {
+      "main": [
+        "underscore-min.js"
+      ]
     }
   }
 }
