--- a/gulp/package.json
+++ b/gulp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulp-static-website",
+  "name": "gulp-static-website-small",
   "description": "",
   "version": "0.0.0",
   "author": "",
