--- a/gulp/package.json
+++ b/gulp/package.json
@@ -9,8 +9,8 @@
     "bower": ">=1.3.9",
     "coffee-script": ">=1.7.1",
     "gulp": ">=3.8.7",
+    "gulp-autoprefixer": ">=1.0.1",
     "gulp-coffee": ">=2.1.1",
-    "gulp-coffeelint": ">=0.3.3",
     "gulp-clean": ">=0.3.1",
     "gulp-connect": ">=2.0.6",
     "gulp-ruby-sass": ">=0.7.1",
