--- a/gulp/package.json
+++ b/gulp/package.json
@@ -12,6 +12,7 @@
     "gulp-autoprefixer": ">=1.0.1",
     "gulp-coffee": ">=2.1.1",
     "gulp-clean": ">=0.3.1",
+    "gulp-concat": ">=2.4.1",
     "gulp-connect": ">=2.0.6",
     "gulp-ruby-sass": ">=0.7.1",
     "gulp.spritesmith": ">=1.1.1",
